--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Sheeple",
-  "name": "Sheeple - Đố vui học đường",
+  "name": "Sheeple",
   "icons": [
     {
       "src": "favicon.ico",
